<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register"
    android:background="@color/bandUpBackground">

    <include layout="@layout/ads"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/register_email" />


                </android.support.design.widget.TextInputLayout>
                <FrameLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_checkbox_marked_circle"
                        android:tint="@color/bandUpGreen"
                        android:id="@+id/emailValidationSuccess"
                        android:visibility="invisible"/>
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/emailValidationLoading"
                        android:visibility="invisible"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_close_circle"
                        android:tint="@color/bandUpRed"
                        android:id="@+id/emailValidationError"
                        android:visibility="invisible"/>
                </FrameLayout>

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_username"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/register_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/register_confirm_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDateOfBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDateOfBirth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textIsSelectable="false"
                    android:focusable="false"
                    android:editable="false"
                    android:hint="@string/dateOfBirth"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRegister"
                android:text="@string/register_btn_register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
