...
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn_register">Register</string>
    <string name="register_title">Register</string>
    <string name="register_dob_hint">What is your date of birth?</string>
    <string name="register_til_error_fill_password">You must fill in a password</string>
    <string name="register_til_error_password_mismatch">Passwords do not match</string>
    <string name="register_til_error_username">You must fill in your name</string>
    <string name="register_til_error_email_linked">This email is already associated with an account</string>
    <string name="register_til_error_email_format">This email address is not in the correct format</string>
    <string name="register_til_error_fill_email">You must fill in your email address</string>
    <string name="register_til_error_password_length">Your password must be at least 6 characters long</string>
    <string name="register_fix_errors">Please fix the remaining errors.</string>
    <string name="register_til_error_fill_password_again">Please fill in your password again</string>
    <string name="register_success">Registration successful!\nYou can log in now.</string>
    <string name="register_password_mismatch">Passwords don\'t match!</string>
    <string name="register_enter_dateofbirth">Please enter your Date Of Birth.</string>
    <string name="register_progress_description">Please wait...</string>
    <string name="register_progress_title">Registering</string>

    <!-- Password Reset -->
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="send_password_reset_e_mail">Send password reset email</string>
...
    <string name="settings_progress_delete_title">Deleting Your Account</string>
    <string name="settings_progress_delete_message">Please wait...</string>
    <string name="settings_email_support">Email Support</string>

    <!-- Advanced Search -->
    <string name="search_no_results">Could not find anyone matching your criteria</string>
    <string name="search_ok">OK</string>
    <string name="search_cancel">Cancel</string>
    <string name="search_none_selected">None selected</string>
    <string name="search_select">Select</string>
    <string name="search_select_instruments">Select Instruments</string>
    <string name="search_select_genres">Select Genres</string>
    <string name="search_musicians_displayed">Choose what kind of musicians you want to display</string>
...
